All Myserty Containers Work. Needs balancing

--- a/config/config.jsonc
+++ b/config/config.jsonc
@@ -1,13 +1,17 @@
 {
+  // Note: The Config stores all values that are configurable to personal preferences. You can manipulate Mystery Container prices, stock, and odd here
+
+
+
   // Debug Option: Every Mystery Box opening will post its item information in the console before opening.
   //
-  "debug": true, // Default is false
+  "debug": false, // Default is false
 
   // Custom Trader Settings
   //
-  // Trader Refresh time In Seconds. Trader will refresh inventory stock between Min-Max time.
-  "trader_update_min_time": 3600,
-  "trader_update_max_time": 4000,
+  // Trader Refresh time In Seconds. Trader will refresh inventory stock somewhere between Min-Max seconds .
+  "trader_update_min_time": 3600, // 3600 Seconds
+  "trader_update_max_time": 4000, // 4000 Seconds
 
   // Custom Gambling Price And Stock Settings
   //
@@ -28,8 +32,8 @@
     "keycard_price": 265000,
     "keycard_stock": 15,
 
-    "fiftyfity_price": 2500000,
-    "fiftyfity_stock": 2,
+    "fiftyfifty_price": 2500000,
+    "fiftyfifty_stock": 2,
 
     "melee_price": 58500,
     "melee_stock": 25,
@@ -37,7 +41,7 @@
     "gun_case_price": 86500,
     "gun_case_stock": 15,
 
-    "premium_gun_case_price": 240000,
+    "premium_gun_case_price": 250000,
     "premium_gun_case_stock": 4,
 
     "helmet_case_price": 55000,
@@ -59,67 +63,67 @@
     "backpack_case_stock": 15,
 
     "7.62x25_case_price": 10000,
-    "7.62x25_case_stock": 20,
+    "7.62x25_case_stock": 555,
 
     "9x18_case_price": 10000,
-    "9x18_case_stock": 20,
+    "9x18_case_stock": 555,
 
     "9x19_case_price": 10000,
-    "9x19_case_stock": 20,
+    "9x19_case_stock": 555,
 
     "9x21_case_price": 10000,
-    "9x21_case_stock": 20,
+    "9x21_case_stock": 555,
 
     ".357_case_price": 10000,
-    ".357_case_stock": 20,
+    ".357_case_stock": 555,
 
     ".45_case_price": 10000,
-    ".45_case_stock": 20,
+    ".45_case_stock": 555,
 
     "4.6x30_case_price": 10000,
-    "4.6x30_case_stock": 20,
+    "4.6x30_case_stock": 555,
 
     "5.7x28_case_price": 10000,
-    "5.7x28_case_stock": 20,
+    "5.7x28_case_stock": 555,
 
     "5.45x39_case_price": 8500,
-    "5.45x39_case_stock": 20,
+    "5.45x39_case_stock": 555,
 
     "5.56x45_case_price": 11500,
-    "5.56x45_case_stock": 20,
+    "5.56x45_case_stock": 555,
 
     ".300_case_price": 10000,
-    ".300_case_stock": 20,
+    ".300_case_stock": 555,
 
     "7.62x39_case_price": 10000,
-    "7.62x39_case_stock": 20,
+    "7.62x39_case_stock": 555,
 
     "7.62x51_case_price": 11500,
-    "7.62x51_case_stock": 20,
+    "7.62x51_case_stock": 555,
 
     "7.62x54_case_price": 14000,
-    "7.62x54_case_stock": 20,
+    "7.62x54_case_stock": 555,
 
     ".338_case_price": 30000,
-    ".338_case_stock": 20,
+    ".338_case_stock": 555,
 
     "9x39_case_price": 8750,
-    "9x39_case_stock": 20,
+    "9x39_case_stock": 555,
 
     ".366_case_price": 10000,
-    ".366_case_stock": 20,
+    ".366_case_stock": 555,
 
     "12.7x55_case_price": 10000,
-    "12.7x55_case_stock": 20,
+    "12.7x55_case_stock": 555,
 
     "12/70_case_price": 10000,
-    "12/70_case_stock": 20,
+    "12/70_case_stock": 555,
 
     "20/70_case_price": 10000,
-    "20/70_case_stock": 20,
+    "20/70_case_stock": 555,
 
     "23x75_case_price": 10000,
-    "23x75_case_stock": 20
+    "23x75_case_stock": 555
   },
 
   // GAMBLING ODDS SECTION
@@ -130,12 +134,12 @@
     // gambling_container_wallet
     //
     // Chance for each possibility in percentage from rarest to most common
-    "wallet_extremely_rare": 1,   // 2 Million Roubles
-    "wallet_rare": 2,             // 1 Miliion Roubles
-    "wallet_kinda_rare": 4,       // 500k Roubles
-    "wallet_uncommon": 9,         // 300k Roubles
-    "wallet_common": 35,          // 100K Roubles
-    // 100% - all above percentages = % at receiving nothing from gambling container. If desired. (Applies to all gambling containers!)
+    "wallet_extremely_rare": 1.0,   // 2 Million Roubles
+    "wallet_rare": 2.0,             // 1 Miliion Roubles
+    "wallet_kinda_rare": 4.0,       // 500k Roubles
+    "wallet_uncommon": 9.0,         // 300k Roubles
+    "wallet_common": 35.0,          // 100K Roubles
+    // 100 minus all above percentages = percentage at receiving nothing from gambling container. If desired. (Applies to all gambling containers!)
 
     // gambling_container_key
     "key_extremely_rare": 0.5,    // Extremely Rare Key
@@ -156,9 +160,9 @@
     "keycard_black": 0.65,        // Black Keycard
     "keycard_yellow": 1.2,        // Yellow Keycard
     "keycard_blue_marking": 6.25, // Keycard with blue marking
-    "keycard_21WS": 8,            // 21WS Keycard
-    "keycard_11SR": 8,            // 11SR Keycard
-    "keycard_access": 55,         // Access Keycard
+    "keycard_21WS": 8.0,            // 21WS Keycard
+    "keycard_11SR": 8.0,            // 11SR Keycard
+    "keycard_access": 50.0,         // Access Keycard
 
     // gambling_container_melee
     "melee_extremely_rare": 0.25, // Extremely Rare melee
@@ -167,17 +171,17 @@
     "melee_common": 75.0,         // Common melee
 
     // gambling_container_backpack
-    "backpack_extremely_rare": 5, // Extremely Rare melee
-    "backpack_rare": 12,          // Rare melee
-    "backpack_uncommon": 30,      // Uncommon melee
-    "backpack_common": 53,        // Common melee
+    "backpack_extremely_rare": 5.0, // Extremely Rare melee
+    "backpack_rare": 12.0,          // Rare melee
+    "backpack_uncommon": 30.0,      // Uncommon melee
+    "backpack_common": 53.0,        // Common melee
 
     // gambling_container_weapon
-    "gun_meta": 10,               // Meta Gun
-    "gun_meme": 7,                // Meme Gun
-    "gun_uncommon": 28,           // Semi-modded Gun
-    "gun_scav": 20,               // Scav Gun
-    "gun_common": 35,             // Default Gun
+    "gun_meta": 10.0,               // Meta Gun
+    "gun_meme": 7.0,                // Meme Gun
+    "gun_uncommon": 28.0,           // Semi-modded Gun
+    "gun_scav": 20.0,               // Scav Gun
+    "gun_common": 35.0,             // Default Gun
 
     // gambling_container_premium_weapon
     "premium_gun_meta": 100.0,    // Rare Gun
@@ -198,89 +202,153 @@
 
     // gambling_container_premium_armor
     "premium_armor_rare": 100.0,  // Rare Armor
+
     // gambling_container_7.62x25
-    "7.62x25_common": 65.0,       // Common Round 7.62x25
+    "7.62x25_common": 62.5,       // Common Round 7.62x25
     "7.62x25_uncommon": 25.0,     // Uncommon Round 7.62x25
-    "7.62x25_rare": 10.0,         // Rare Round 7.62x25
+    "7.62x25_rare": 12.5,         // Rare Round 7.62x25
+    "7.62x25_min": 5,
+    "7.62x25_max": 30,
+
     // gambling_container_9x18
-    "9x18_common": 65.0,          // Common Round 9x18mm
+    "9x18_common": 62.5,          // Common Round 9x18mm
     "9x18_uncommon": 25.0,        // Uncommon Round 9x18mm
-    "9x18_rare": 10.0,            // Rare Round 9x18mm
+    "9x18_rare": 12.5,            // Rare Round 9x18mm
+    "9x18_min": 5,
+    "9x18_max": 30,
+    
     // gambling_container_9x19
-    "9x19_common": 65.0,          // Common Round 9x19
+    "9x19_common": 62.5,          // Common Round 9x19
     "9x19_uncommon": 25.0,        // Uncommon Round 9x19
-    "9x19_rare": 10.0,            // Rare Round 9x19
+    "9x19_rare": 12.5,            // Rare Round 9x19
+    "9x19_min": 5,
+    "9x19_max": 30,
+
     // gambling_container_9x21
-    "9x21_common": 65.0,          // Common Round 9x21
+    "9x21_common": 62.5,          // Common Round 9x21
     "9x21_uncommon": 25.0,        // Uncommon Round 9x21
-    "9x21_rare": 10.0,            // Rare Round 9x21
+    "9x21_rare": 12.5,            // Rare Round 9x21
+    "9x21_min": 5,
+    "9x21_max": 30,
+
     // gambling_container_.357
-    ".357_common": 65.0,          // Common Round .357
+    ".357_common": 62.5,          // Common Round .357
     ".357_uncommon": 25.0,        // Uncommon Round .357
-    ".357_rare": 10.0,            // Rare Round .357
+    ".357_rare": 12.5,            // Rare Round .357
+    ".357_min": 5,
+    ".357_max": 30,
+
     // gambling_container_.45_ACP
-    ".45_common": 65.0,           // Common Round .45
+    ".45_common": 62.5,           // Common Round .45
     ".45_uncommon": 25.0,         // Uncommon Round .45
-    ".45_rare": 10.0,             // Rare Round .45
+    ".45_rare": 12.5,             // Rare Round .45
+    ".45_min": 5,
+    ".45_max": 30,
+
     // gambling_container_4.6x30
-    "4.6x30_common": 65.0,        // Common Round 4.6x30
+    "4.6x30_common": 62.5,        // Common Round 4.6x30
     "4.6x30_uncommon": 25.0,      // Uncommon Round 4.6x30
-    "4.6x30_rare": 10.0,          // Rare Round 4.6x30
+    "4.6x30_rare": 12.5,          // Rare Round 4.6x30
+    "4.6x30_min": 5,
+    "4.6x30_max": 30,
+
     // gambling_container_5.7x28
-    "5.7x28_common": 65.0,        // Common Round 5.7x28
+    "5.7x28_common": 62.5,        // Common Round 5.7x28
     "5.7x28_uncommon": 25.0,      // Uncommon Round 5.7x28
-    "5.7x28_rare": 10.0,          // Rare Round 5.7x28
+    "5.7x28_rare": 12.5,          // Rare Round 5.7x28
+    "5.7x28_min": 5,
+    "5.7x28_max": 30,
+
     // gambling_container_5.45x39
-    "5.45x39_common": 65.0,       // Common Round 5.45x39
+    "5.45x39_common": 62.5,       // Common Round 5.45x39
     "5.45x39_uncommon": 25.0,     // Uncommon Round 5.45x39
-    "5.45x39_rare": 10.0,         // Rare Round 5.45x39
+    "5.45x39_rare": 12.5,         // Rare Round 5.45x39
+    "5.45x39_min": 5,
+    "5.45x39_max": 30,
+
     // gambling_container_5.56x45
-    "5.56x45_common": 65.0,       // Common Round 5.56x45
+    "5.56x45_common": 62.5,       // Common Round 5.56x45
     "5.56x45_uncommon": 25.0,     // Uncommon Round 5.56x45
-    "5.56x45_rare": 10.0,         // Rare Round 5.56x45
+    "5.56x45_rare": 12.5,         // Rare Round 5.56x45
+    "5.56x45_min": 5,
+    "5.56x45_max": 30,
+
     // gambling_container_.300_Blackout
-    ".300_common": 65.0,          // Common Round .300
+    ".300_common": 62.5,          // Common Round .300
     ".300_uncommon": 25.0,        // Uncommon Round .300
-    ".300_rare": 10.0,            // Rare Round .300
+    ".300_rare": 12.5,            // Rare Round .300
+    ".300_min": 5,
+    ".300_max": 30,
+
     // gambling_container_7.62x39
-    "7.62x39_common": 65.0,       // Common Round 7.62x39
+    "7.62x39_common": 62.5,       // Common Round 7.62x39
     "7.62x39_uncommon": 25.0,     // Uncommon Round 7.62x39
-    "7.62x39_rare": 10.0,         // Rare Round 7.62x39
+    "7.62x39_rare": 12.5,         // Rare Round 7.62x39
+    "7.62x39_min": 5,
+    "7.62x39_max": 30,
+
     // gambling_container_7.62x51
-    "7.62x51_common": 65.0,       // Common Round 7.62x51
+    "7.62x51_common": 62.5,       // Common Round 7.62x51
     "7.62x51_uncommon": 25.0,     // Uncommon Round 7.62x51
-    "7.62x51_rare": 10.0,         // Rare Round 7.62x51
+    "7.62x51_rare": 12.5,         // Rare Round 7.62x51
+    "7.62x51_min": 5,
+    "7.62x51_max": 30,
+
     // gambling_container_7.62x54
-    "7.62x54_common": 65.0,       // Common Round 7.62x54
+    "7.62x54_common": 62.5,       // Common Round 7.62x54
     "7.62x54_uncommon": 25.0,     // Uncommon Round 7.62x54
-    "7.62x54_rare": 10.0,         // Rare Round 7.62x54
+    "7.62x54_rare": 12.5,         // Rare Round 7.62x54
+    "7.62x54_min": 5,
+    "7.62x54_max": 30,
+
     // gambling_container_.338
-    ".338_common": 65.0,          // Common Round .338
+    ".338_common": 62.5,          // Common Round .338
     ".338_uncommon": 25.0,        // Uncommon Round .338
-    ".338_rare": 10.0,            // Rare Round .338
+    ".338_rare": 12.5,            // Rare Round .338
+    ".338_min": 5,
+    ".338_max": 10,
+
     // gambling_container_9x39
-    "9x39_common": 65.0,          // Common Round 9x39
-    "9x39_uncommon": 25.0,        // Uncommon Round 9x39
+    "9x39_common": 75.0,          // Common Round 9x39
+    "9x39_uncommon": 15.0,        // Uncommon Round 9x39
     "9x39_rare": 10.0,            // Rare Round 9x39
+    "9x39_min": 5,
+    "9x39_max": 30,
+
     // gambling_container_.366
-    ".366_common": 65.0,          // Common Round .366
+    ".366_common": 62.5,          // Common Round .366
     ".366_uncommon": 25.0,        // Uncommon Round .366
-    ".366_rare": 10.0,            // Rare Round .366
+    ".366_rare": 12.5,            // Rare Round .366
+    ".366_min": 5,
+    ".366_max": 30,
+
     // gambling_container_12.7x55
-    "12.7x55_common": 65.0,       // Common Round 12.7x55
+    "12.7x55_common": 62.5,       // Common Round 12.7x55
     "12.7x55_uncommon": 25.0,     // Uncommon Round 12.7x55
-    "12.7x55_rare": 10.0,         // Rare Round 12.7x55
+    "12.7x55_rare": 12.5,         // Rare Round 12.7x55
+    "12.7x55_min": 5,
+    "12.7x55_max": 30,
+
     // gambling_container_12/70
-    "12/70_common": 65.0,         // Common Round 12/70
+    "12/70_common": 62.5,         // Common Round 12/70
     "12/70_uncommon": 25.0,       // Uncommon Round 12/70
-    "12/70_rare": 10.0,           // Rare Round 12/70
+    "12/70_rare": 12.5,           // Rare Round 12/70
+    "12/70_min": 5,
+    "12/70_max": 10,
+
     // gambling_container_20/70
-    "20/70_common": 65.0,         // Common Round 20/70
+    "20/70_common": 62.5,         // Common Round 20/70
     "20/70_uncommon": 25.0,       // Uncommon Round 20/70
-    "20/70_rare": 10.0,           // Rare Round 20/70
+    "20/70_rare": 12.5,           // Rare Round 20/70
+    "20/70_min": 5,
+    "20/70_max": 10,
+
     // gambling_container_23x75
-    "23x75_common": 65.0, // Common Round 23x75
+    "23x75_common": 62.5, // Common Round 23x75
     "23x75_uncommon": 25.0, // Uncommon Round 23x75
-    "23x75_rare": 10.0 // Rare Round 23x75
+    "23x75_rare": 12.5, // Rare Round 23x75
+    "23x75_min": 5,
+    "23x75_max": 10
+
   }
 }
