High end armour price override finished

--- a/config/config.jsonc
+++ b/config/config.jsonc
@@ -499,23 +499,28 @@
       "5e85aa1a988a8701445df1f5": 550   // 23x75mm Barrikada
     },
     "armor": {
-      "60a283193cb70855c43a381d": 400000, // NFM THOR Integrated Carrier body armor
-      "545cdb794bdc2d3a198b456a": 350000, // 6B43 Zabralo-Sh body armor (Digital Flora)
+      "60a283193cb70855c43a381d": 475000, // NFM THOR Integrated Carrier body armor
+      "545cdb794bdc2d3a198b456a": 400000, // 6B43 Zabralo-Sh body armor (Digital Flora)
       "5ca21c6986f77479963115a7": 350000, // FORT Redut-T5 body armor (Smog)
       "5b44cd8b86f774503d30cba2": 300000, // IOTV Gen4 body armor (Full Protection Kit, MultiCam)
-      "5c0e541586f7747fa54205c9": 285000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 245000, // FORT Redut-M body armor
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
-      "5c0e541586f7747fa54205c9": 250000, // 6B13 M assault armor (Killa Edition)
+      "5c0e541586f7747fa54205c9": 295000, // 6B13 M assault armor (Killa Edition)
+      "5ca2151486f774244a3b8d30": 235000, // FORT Redut-M body armor
+      "5e4abb5086f77406975c9342": 325000, // LBT-6094A Slick Plate Carrier (Black)
+      "6038b4b292ec1c3103795a0b": 300000, // LBT-6094A Slick Plate Carrier (Coyote Tan)
+      "6038b4ca92ec1c3103795a0d": 300000, // LBT-6094A Slick Plate Carrier (Olive Drab)
+      "5fd4c474dd870108a754b241": 325000, // 5.11 Tactical Hexgrid plate carrier
+      "5e9dacf986f774054d6b89f4": 225000, // FORT Defender-2 body armor
+      "5b44cf1486f77431723e3d05": 215000, // IOTV Gen4 body armor (Assault Kit, MultiCam)
+      "5b44d0de86f774503d30cba8": 200000, // IOTV Gen4 body armor (High Mobility Kit, MultiCam)
+      "5b44cad286f77402a54ae7e5": 245000, // 5.11 Tactical TacTec plate carrier (Ranger Green)
+      "5e4ac41886f77406a511c9a8": 195000, // Ars Arma CPC MOD.1 plate carrier (A-TACS FG)
+      "60a3c68c37ea821725773ef5": 195000, // CQC Osprey MK4A plate carrier (Protection, MTP)
+      "609e860ebd219504d8507525": 235000, // Crye Precision AVS plate carrier (Tagilla Edition)
+      "628b9c7d45122232a872358f": 295000, // Crye Precision CPC plate carrier (Goons Edition)
+      "64a5366719bab53bd203bf33": 285000, // Eagle Allied Industries MBSS plate carrier (Coyote Brown)
+      "628b9784bcf6e2659e09b8a2": 245000, // S&S Precision PlateFrame plate carrier (Goons Edition)
+      "628cd624459354321c4b7fa2": 165000, // Tasmanian Tiger SK plate carrier (MultiCam Black)
+      "5c0e625a86f7742d77340f62": 225000 // BNTI Zhuk body armor (Digital Flora)
     }
   }
 }
